<resources>
    <string name="app_name">RIT Systems</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_label"> Início </string>
    <string name="teachers_label"> Professores </string>
    <string name="activities_label"> Atividades </string>
    <string name="subjects_label"> Disciplinas </string>

    <string name="search">Pesquisar</string>
    <string name="add">Adicionar</string>

    <string name="item_text">Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informations">Informações</string>
    <string name="SubjectData">Dados da Disciplina</string>
    <string name="Code">Código:</string>
    <string name="empty">Valor não encontrado.</string>
    <string name="SubjectName">Nome da Disciplina</string>
    <string name="LocalAndHour">Horário e Local</string>
    <string name="Start">Início: </string>
    <string name="End">Fim:</string>
    <string name="Classroom">Sala de Aula:</string>
    <string name="TeacherInfo">Informações do Professor</string>
    <string name="TeacherName">Nome do Professor</string>
    <string name="OtherInfo">Outras Informações</string>
    <string name="PreRequisites">Pré-requisitos: </string>
    <string name="Workload">"Carga Horária: "</string>
    <string name="Credits">"Créditos: "</string>
    <string name="NumberOfVacancies">Número de Vagas:</string>
    <string name="AddSubject">Cadastrar Disciplinas</string>
    <string name="Description">Descrição</string>
    <string name="Add">Cadastrar</string>
    <string name="cancel">Cancelar</string>
    <string name="Confirm">Confirmar</string>
    <string name="Students">Estudantes</string>
    <string name="BasicInfo">Informações Básicas</string>
    <string name="FullName">Nome Completo: </string>
    <string name="EntryDate">Data de Ingresso: </string>
    <string name="Registration">Matrícula:</string>
    <string name="ContactInfo">Informações de Contato</string>
    <string name="Email">E-mail:</string>
    <string name="PhoneNumber">"Telefone: "</string>
    <string name="OrientationInfo">Informações sobre a Orientação</string>
</resources>